--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,24 @@
     color: #d9cab8;
 }
 
-.nav-buttons img{
+.nav-buttons button{
+    background-color: transparent;
+    border: none;
+    outline: none;
     margin-left: 30px;
+    cursor: pointer;
+}
+
+.nav-buttons button svg {
+    fill: #fff;
+}
+
+.nav-buttons button svg:hover {
+    fill: #ac9785;
+}
+
+.nav-buttons button svg:active {
+    fill: #736357;
 }
 
 .slider{
