--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,7 @@ input[type="text"]:focus {
     width: 580px;
     text-align: center;
     margin-bottom: 55px;
+    position: relative;
 }
 
 .started {
@@ -226,7 +227,7 @@ input[type="text"]:focus {
     height: 53px;
 }
 
-.started button,
+.slider-content p button,
 .theme-info-button button{
     width: 170px;
     height: 50px;
@@ -244,12 +245,26 @@ input[type="text"]:focus {
     cursor: pointer;
 }
 
-.started button:hover,
+.slider-content p button{
+    position: absolute;
+    bottom: -100px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+}
+
+.slider-content p button:active{
+    background-color: #736357;
+    bottom: -103px;
+    box-shadow: none;
+}
+
+.slider-content p button:hover,
 .theme-info-button button:hover{
     background-color: #ac9785;
 }
 
-.started button:active,
 .theme-info-button button:active{
     background-color: #736357;
     margin-top: 3px;
