--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ input[type="text"]:focus {
 }
 
 .slider-content p button,
-.theme-info-button button{
+.theme-info-content button{
     width: 170px;
     height: 50px;
     background-color: #998675;
@@ -243,15 +243,20 @@ input[type="text"]:focus {
     border-bottom: 3px;
     box-shadow: 0 3px #736357;
     cursor: pointer;
+    position: absolute;
 }
 
 .slider-content p button{
-    position: absolute;
     bottom: -100px;
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
+}
+
+.theme-info-content button{
+    right: 10px;
+    top: 50px;
 }
 
 .slider-content p button:active{
@@ -261,11 +266,11 @@ input[type="text"]:focus {
 }
 
 .slider-content p button:hover,
-.theme-info-button button:hover{
+.theme-info-content button:hover{
     background-color: #ac9785;
 }
 
-.theme-info-button button:active{
+.theme-info-content button:active{
     background-color: #736357;
     margin-top: 3px;
     box-shadow: none;
@@ -444,30 +449,24 @@ input[type="text"]:focus {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 
-.theme-info-title{
-    width: 80%;
-}
 
-.theme-info-title h2{
+.theme-info-content h2{
     font-size: 28px;
     font-family: "Raleway", sans-serif;
     font-weight: 400;
     color: #fff;
 }
 
-.theme-info-title h2 span{
+.theme-info-content h2 span{
     color: #c7b299;
 }
 
-.theme-info-title p{
+.theme-info-content p{
     font-size: 18px;
     font-family: "Montserrat", sans-serif;
     color: #615855;
     font-weight: 300;
-}
-
-.theme-info-button{
-    width: 20%;
 }
