--- a/css/style.css
+++ b/css/style.css
@@ -478,9 +478,8 @@ input[type="text"]:focus {
 .theme-info-content{
     width: 1230px;
     margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
+    padding-top: 43px;
+    padding-left: 30px;
 }
 
 
@@ -500,4 +499,5 @@ input[type="text"]:focus {
     font-family: "Montserrat", sans-serif;
     color: #615855;
     font-weight: 300;
+    margin-top: 4px;
 }
