--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ input[type="text"]:focus {
 
 .slider-content p button,
 .theme-info-content button,
-.latest-projects button{
+.load-more{
     width: 170px;
     height: 50px;
     background-color: #998675;
@@ -282,7 +282,7 @@ input[type="text"]:focus {
     top: 50px;
 }
 
-.latest-projects button{
+.load-more{
     bottom: -54px;
     margin-left: auto;
     margin-right: auto;
@@ -292,7 +292,7 @@ input[type="text"]:focus {
 
 .slider-content p button:hover,
 .theme-info-content button:hover,
-.latest-projects button:hover{
+.load-more:hover{
     background-color: #ac9785;
 }
 
@@ -302,7 +302,7 @@ input[type="text"]:focus {
     box-shadow: none;
 }
 
-.latest-projects button:active{
+.load-more:active{
     background-color: #736357;
     bottom: -57px;
     box-shadow: none;
@@ -600,6 +600,7 @@ input[type="text"]:focus {
     min-height: 340px;
     background-color: #fbfaf8;
     margin-bottom: 30px;
+    position: relative;
 }
 
 .project:after{
