--- a/css/style.css
+++ b/css/style.css
@@ -691,3 +691,88 @@ input[type="text"]:focus {
 .btn-search{
     left: 200px;
 }
+
+.video {
+    width: 100%;
+    max-height: 706px;
+    height: auto;
+    display: flex;
+    position: relative;
+}
+
+.video-precenteition {
+    width: 100%;
+    max-width: 1920px;
+    height: auto;
+    margin: 0;
+    outline: none;
+    background-color: #445162;
+    object-fit: cover;
+}
+
+.video-content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: inherit;
+    height: 100%;
+}
+
+.fon-video {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 190;
+}
+
+.start-video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10.72917%;
+    border-radius: 50%;
+    background-color: rgba(0,0,0,0.2);
+    width: 100px;
+    height: 100px;
+    z-index: 200;
+    border: none;
+    outline: none;
+}
+
+.button-start-video {
+    fill: white;
+    z-index: 243;
+}
+
+.h2-video {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    margin-top: 40px;
+    width: 500px;
+    font-weight: 500;
+    font-family: "Raleway", Sans-serif;
+    font-size: 30px;
+    color: #fff;
+    z-index: 205;
+}
+
+.p-video {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    margin-top: 20px;
+    margin-left: -20px;
+    width: 590px;
+    font-family: "Montserrat", Sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    color: #fff;
+    line-height: 28px;
+    z-index: 205;
+}
