--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ form {
 input[type="text"] {
     height: 42px;
     width: 0;
-    padding: 0 42px 0 15px;
+    padding: 0 15px;
     border: none;
     border-bottom: 2px solid transparent;
     outline: none;
@@ -151,10 +151,11 @@ input[type="text"] {
     z-index: 2;
 }
 input[type="text"]:focus {
+    margin-top: 40px;
     width: 300px;
     z-index: 1;
     border-bottom: 2px solid #F9F0DA;
-    background-color: #555;
+    background-color: rgba(85, 85, 85, 0.6);
     color: #fff;
 }
 .submit-button {
