--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@
 }
 
 @font-face {
+    font-family: 'Montserrat';
+    src: local('Montserrat'), local('Montserrat-Regular'), url('../fonts/montserrat.woff2') format('woff2'), url('../fonts/montserrat.woff') format('woff'), url('../fonts/montserrat.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'Raleway';
     src: local('Raleway Regular'), local('Raleway-Regular'), url('../fonts/ralewayregular.woff2') format('woff2'), url('../fonts/ralewayregular.woff') format('woff'), url('../fonts/ralewayregular.ttf') format('truetype');
     font-weight: 400;
@@ -669,87 +676,81 @@ input[type="text"]:focus {
     left: 200px;
 }
 
-.video {
+.video-block {
     width: 100%;
     max-height: 706px;
-    height: auto;
     display: flex;
     position: relative;
+    background: linear-gradient(to right, #211b19, #4e3427);
 }
 
-.video-precenteition {
+.video {
     width: 100%;
     max-width: 1920px;
     height: auto;
-    margin: 0;
+    margin: 0 auto;
     outline: none;
-    background-color: #445162;
     object-fit: cover;
 }
 
-.video-content {
+.video-controls {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
     position: absolute;
-    left: 0;
-    top: 0;
     width: inherit;
-    height: 100%;
+    min-height: 100%;
+    background: url("../img/bg-video.jpg") center no-repeat;
 }
 
-.fon-video {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 190;
-}
-
-.start-video {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10.72917%;
+.play {
     border-radius: 50%;
     background-color: rgba(0,0,0,0.2);
     width: 100px;
     height: 100px;
-    z-index: 200;
     border: none;
     outline: none;
+    margin-bottom: 40px;
 }
 
-.button-start-video {
-    fill: white;
-    z-index: 243;
+.play svg {
+    fill: #fff;
+    cursor: pointer;
 }
 
-.h2-video {
-    margin: 0;
-    padding: 0;
+.play:hover svg{
+    fill: #ac9785;
+}
+
+.play:active svg{
+    fill: #736357;
+}
+
+.video-controls h2 {
     text-align: center;
-    margin-top: 40px;
     width: 500px;
     font-weight: 500;
-    font-family: "Raleway", Sans-serif;
+    font-family: "Raleway", sans-serif;
     font-size: 30px;
     color: #fff;
-    z-index: 205;
+    margin-bottom: 30px;
 }
 
-.p-video {
-    margin: 0;
-    padding: 0;
+.video-controls p {
     text-align: center;
-    margin-top: 20px;
-    margin-left: -20px;
     width: 590px;
-    font-family: "Montserrat", Sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 300;
     font-size: 16px;
     color: #fff;
     line-height: 28px;
-    z-index: 205;
+    margin-bottom: 40px;
+}
+
+.video-controls span{
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    color: #c7b299;
 }
