--- a/css/style.css
+++ b/css/style.css
@@ -79,11 +79,12 @@
     min-height: 1024px;
     background: #211b19 url("../img/head-bg.jpg");
     background-size: cover;
+    position: relative;
 }
 
 .header-content-navigation{
     margin: 0 auto;
-    width: 100%;
+    width: 1230px;
     padding-top: 40px;
     display: flex;
     justify-content: space-between;
@@ -105,7 +106,22 @@
     text-decoration: none;
     font-size: 34px;
     font-family: "Raleway", sans-serif;
+    margin-right: 220px;
     font-weight: 400;
+}
+
+label,
+#menu {
+    display: none;
+}
+
+input[type="checkbox"]:checked ~ .header-content-navigation ul,
+input[type="checkbox"]:checked ~ .header-content-navigation .nav-buttons{
+    visibility: visible;
+}
+
+input[type="checkbox"]:checked ~ .slider {
+    visibility: hidden;
 }
 
 .header-content-navigation ul{
@@ -506,7 +522,8 @@ input[type="text"]:focus {
 }
 
 .theme-info-content{
-    width: 1230px;
+    width: 100%;
+    max-width: 1230px;
     margin: 0 auto;
     padding-top: 43px;
     position: relative;
@@ -1273,7 +1290,290 @@ footer {
         min-height: 600px;
     }
 
+    .header-content-navigation,
+    .theme-info,
+    .footer-top,
+    .footer-center,
+    .footer-bottom {
+        width: 100%;
+        min-width: 960px;
+    }
+
     .slider {
         min-height: 528px;
+    }
+
+    .logo-block {
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+
+    .header-content-navigation ul li {
+        margin-right: 25px;
+    }
+
+    .nav-buttons button {
+        margin-left: 0;
+    }
+
+    .nav-buttons form {
+        margin-right: 25px;
+    }
+
+    .slider-content button {
+        bottom: 105px;
+    }
+
+    .slider-content button:active{
+        bottom: 102px;
+    }
+
+    .professions,
+    .ideas-content,
+    .latest-projects,
+    .devices-block,
+    .posts{
+        width: 960px;
+    }
+
+    .professions {
+        padding: 40px 0;
+    }
+
+    .profession {
+        width: 220px;
+    }
+
+    .ideas,
+    .statistic,
+    .footer-top {
+        min-width: 960px;
+    }
+
+    .ideas-content {
+        padding-top: 20px;
+    }
+
+    .ideas-img {
+        background-size: 600px;
+        min-height: 382px;
+    }
+
+    .devices-block {
+        background-size: 300px;
+        padding: 90px 50px 0 250px;
+        min-height: 495px;
+    }
+
+    .posts-block :nth-child(3)  {
+        display: none;
+    }
+
+    .posts-block .post span {
+        display: block;
+    }
+
+    .footer-top {
+        min-height: 350px;
+        justify-content: space-evenly;
+    }
+
+    .footer-top a {
+        margin: 0;
+    }
+
+    .footer-top a img {
+        width: 90%;
+    }
+
+    .footer-center {
+        min-height: 450px;
+    }
+
+    .footer-center-block {
+        display: none;
+    }
+
+    .footer-center-info,
+    .footer-center-posts,
+    .footer-center-block {
+        padding-top: 60px;
+    }
+
+    .footer-logo-block {
+        top: 50px;
+    }
+}
+
+@media (max-width: 992px) {
+    .head {
+        width: 100%;
+        min-width: 720px;
+        max-height: 400px;
+        min-height: 400px;
+    }
+
+
+    .header-content-navigation {
+        padding-top: 20px;
+        min-width: 720px;
+    }
+
+    .slider{
+        padding-top: 20px;
+        min-height: 300px;
+    }
+
+    .switch {
+        width: 10%;
+    }
+
+    .slider-content {
+        width: 80%;
+        justify-content: normal;
+        margin-top: 20px;
+    }
+
+    .slider-content button {
+        bottom: 45px;
+    }
+
+    .slider-content button:active{
+        bottom: 42px;
+    }
+
+    .pagination {
+        height: 30px;
+    }
+
+    label {
+        display: block;
+        position: absolute;
+        width: 34px;
+        height: 20px;
+        background: transparent;
+        right: 20px;
+        top: 30px;
+        cursor: pointer;
+        border-top: 4px solid white;
+        border-bottom: 4px solid white;
+    }
+
+    label:before {
+        content: "";
+        position: absolute;
+        width: 34px;
+        height: 4px;
+        background: #fff;
+        top: 8px
+    }
+
+    .header-content-navigation ul {
+        visibility: hidden;
+        position: absolute;
+        display: block;
+        column-count: 2;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, 30%);
+        font-size: 20px;
+    }
+
+    .header-content-navigation ul li {
+        width: 300px;
+        height: 50px;
+        margin-bottom: 10px;
+        background-color: rgba(85, 85, 85, 0.6);
+    }
+
+    .header-content-navigation ul li:hover {
+        background-color: rgba(85, 85, 85, 0.9);
+    }
+
+    .header-content-navigation ul li a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .nav-buttons {
+        visibility: hidden;
+        position: absolute;
+        bottom: 15px;
+        width: 100%;
+        padding: 0 25px;
+        display: flex;
+        justify-content: space-around;
+        box-sizing: border-box;
+    }
+
+    input[type="text"]:focus {
+        margin-top: 0;
+        width: 330px;
+    }
+
+    input[type="text"] {
+        font-size: 22px;
+    }
+
+    .professions {
+        width: 100%;
+        flex-wrap: wrap;
+        padding: 0;
+        margin-top: 20px;
+    }
+
+    .profession {
+        width: 50%;
+        margin-bottom: 20px;
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
+
+    .ideas,
+    .theme-info {
+        min-width: 720px;
+    }
+
+    .ideas-content,
+    .latest-projects {
+        width: 100%;
+    }
+
+    .ideas-content p {
+        width: 90%;
+    }
+
+    .ideas-img {
+        background-size: 400px;
+        min-height: 250px;
+    }
+
+    .latest-projects h2 {
+        margin-top: 30px;
+    }
+
+    .latest-projects p {
+        width: 90%;
+    }
+
+    .devices-block {
+        background-size: 200px;
+        padding: 30px 30px 30px 170px;
+        min-height: 385px;
+        width: 100%;
+    }
+
+    .statistic {
+        flex-wrap: wrap;
+        min-width: auto;
+        padding: 30px 0 0 0;
+    }
+    .stat {
+        width: 20%;
+        margin-bottom: 30px;
     }
 }
